update plots, add counting process

--- a/plots/Makefile
+++ b/plots/Makefile
@@ -1,7 +1,7 @@
 HOST=$(shell hostname)
 UNAME := $(shell uname)
 
-all: profile.pdf profile1.pdf profile2.pdf
+all: profile.pdf profile1.pdf profile2.pdf profile3.pdf
 
 profile.tex: profile.gnuplot ../build/avgsimu
 	gnuplot -c $< $@
@@ -10,6 +10,9 @@ profile1.tex: profile1.gnuplot ../build/avgsimu
 	gnuplot -c $< $@
 
 profile2.tex: profile2.gnuplot ../build/avgsimu Makefile
+	gnuplot -c $< $@
+
+profile3.tex: profile3.gnuplot ../build/avgsimu Makefile
 	gnuplot -c $< $@
 
 clean:
