add and modify several plots

--- a/plots/Makefile
+++ b/plots/Makefile
@@ -1,10 +1,10 @@
 HOST=$(shell hostname)
 UNAME := $(shell uname)
 
-TARGETS = single_waveform.pdf single_waveform_40.pdf \
+TARGETS = single_waveform.pdf single_waveform_40.pdf single_waveform_mz.pdf \
 	averaged_waveform.pdf counting_waveform.pdf digital_averaging.pdf \
 	signal-to-noise.pdf signal-to-noise_linear.pdf \
-	saturation.pdf adc_linearity.pdf \
+	saturation.pdf adc_linearity.pdf saturation_waveform.pdf \
 	pkd+avg.pdf pkd+avg2.pdf \
 	aperture-jitter.pdf
 
@@ -22,6 +22,9 @@ pkd+avg2.tex: pkd+avg2.gnuplot functions.gnuplot
 saturation.tex: saturation.gnuplot functions.gnuplot
 	gnuplot -c $< $@
 
+saturation_waveform.tex: saturation_waveform.gnuplot
+	gnuplot -c $< $@
+
 adc_linearity.tex: adc_linearity.gnuplot
 	gnuplot -c $< $@
 
@@ -29,6 +32,9 @@ single_waveform.tex: single_waveform.gnuplot functions.gnuplot
 	gnuplot -c $< $@
 
 single_waveform_40.tex: single_waveform_40.gnuplot functions.gnuplot
+	gnuplot -c $< $@
+
+single_waveform_mz.tex: single_waveform_mz.gnuplot functions.gnuplot
 	gnuplot -c $< $@
 
 averaged_waveform.tex: averaged_waveform.gnuplot functions.gnuplot
